--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=7.0.0",
         "laravel/framework": "5.5.*",
-        "guzzlehttp/guzzle": ">=6.3"
+        "guzzlehttp/guzzle": ">=6.3",
+        "doctrine/dbal": "^2.6"
     },
     "require-dev": {
         "orchestra/testbench": "^3.5",
