--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description" : "Console commands",
     "keywords": ["laravel", "report", "slack", "laravel6"],
     "license" : "MIT",
+    "version" : "6.0",
     "authors" : [
         {
             "name" : "Dmitry Demidovich",
